# engg_comp-ng

./: README.md  ps1-3.cpp
hello_world.dSYM/Contents/Resources/DWARF/: hello_world
hw1/: ps1-3
hw1/PS01-nayeshag/: hello_world  ps1-3.cpp
hw1/PS02-nayeshag/: ps2-1  ps2-1.cpp  ps2-2  ps2-2.cpp
hw1/PS02-nayeshag/ps2-1.dSYM/Contents/: Info.plist
hw1/PS02-nayeshag/ps2-1.dSYM/Contents/Resources/DWARF/: ps2-1
hw1/PS02-nayeshag/ps2-2.dSYM/Contents/: Info.plist
hw1/PS02-nayeshag/ps2-2.dSYM/Contents/Resources/DWARF/: ps2-2
hw1/PS03-nayeshag/: CMakeLists.txt  glad.c  ps3-1.cpp  ps3-2.cpp
hw1/PS03-nayeshag/PS03-nayeshag/: ps3-1  ps3-1.cpp  ps3-2.cpp  ps3-2_jobin.cpp
hw1/PS03-nayeshag/ps3-1.dSYM/Contents/: Info.plist
hw1/PS03-nayeshag/ps3-1.dSYM/Contents/Resources/DWARF/: ps3-1
hw1/PS03-nayeshag/test.app/Contents/MacOS/: exe
hw1/PS04-nayeshag/: ps4-1.cpp  ps4-2.cpp  tempCodeRunnerFile.cpp
hw1/glad/src/: glad.c  glad.h
ps1-3.dSYM/Contents/: Info.plist
ps1-3.dSYM/Contents/Resources/DWARF/: ps1-3
